syntax = "proto2";
package ct.proto;
option java_package = "nl.rug.search.proto";

import "base.proto";

message RecordDef {
    required ScopedName name = 1;
    
    optional SourceRange definition = 2;
    
    // parents
}

message CxxRecordDef {
    required RecordDef base = 1;
    
    //TODO: might need to be wrapped reference with
    //      visibility information
    repeated Type parents = 2;
}

message EnumDef {
    required ScopedName name = 1;
    
    optional SourceRange definition = 2;
}